--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,8 @@ body {
 /* start nav */
 .mynav{
     background-color:var(--color1) !important;
-    padding-top: 0px !important;
-    padding-bottom: 0px !important;
+    padding-top: 0rem !important;
+    padding-bottom: 0rem !important;
     z-index: 9999;
 }
 nav a{
